fix: one unique navbar in all pages, remove indented html tags, service for navbar color change.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<header>
+  <app-navbar [bgColor]="getNavbarColor() | async"></app-navbar>
+</header>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
+
+
+
