--- a/src/app/modules/error404/pages/error404/error404.component.html
+++ b/src/app/modules/error404/pages/error404/error404.component.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page not found</title>
-</head>
-
-<header>
-  <app-navbar></app-navbar>
-</header>
-
-<body>
+<div class="main-container">
   <div class="container">
     <div class="content-container">
       <h1 class="error-code"><b>404</b></h1>
@@ -24,7 +11,4 @@
     </div>
     <img class="page-not-found-image" src="../../../../../assets/image/general-icons/page-not-found.png" alt="page_not_found_img"/>
   </div>
-  <app-footer></app-footer>
-</body>
-
-</html>
+</div>
