--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IOT Course</title>
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
-</head>
-<header>
-  <app-navbar></app-navbar>
-</header>
-
-<body>
+<div class="main-container">
   <div class="banner">
     <img src="../../../../../assets/image/events/iot/iot-banner.jpeg" class="max-width" alt="Banner IOT" />
   </div>
@@ -55,8 +42,8 @@
         </mat-card>
         -->
         <img data-src="{{image}}"
-          data-background="../../../../../assets/image/events/python-introductory/cursopython.jpg" class="news-card-img"
-          alt="IoT image" />
+             data-background="../../../../../assets/image/events/python-introductory/cursopython.jpg" class="news-card-img"
+             alt="IoT image" />
       </ng-template>
     </swiper>
   </div>
@@ -78,9 +65,4 @@
     </mat-accordion>
   </div>
 
-  <hr>
-  <app-footer></app-footer>
-
-</body>
-
-</html>
+</div>
