--- a/src/app/modules/wie/pages/wie.component.css
+++ b/src/app/modules/wie/pages/wie.component.css
@@ -4,22 +4,14 @@
     object-fit: contain;
 }
 
-html {
-    min-height: 100%;
-    height: auto;
-}
-
-
-body {
-padding: 10%;
-padding-top: 5%;
-padding-bottom: 0%;
-background: rgb(255, 255, 255);
-background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-background-size: cover;
-font-family: "Roboto", Arial, Helvetica, sans-serif;
---wie-purple: #702f8a;
---wie-dark-purple: #451754;
+.main-container {
+  padding: 5% 10% 0%;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
+  background-size: cover;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  --wie-purple: #702f8a;
+  --wie-dark-purple: #451754;
 }
 
 .bottomLine {
