--- a/src/app/modules/about-us/pages/about-us/about-us.component.css
+++ b/src/app/modules/about-us/pages/about-us/about-us.component.css
@@ -1,4 +1,4 @@
-body {
+.main-container {
   padding: 10%;
   background: rgb(255, 255, 255);
   background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
