--- a/src/app/modules/events/pages/events/events.component.css
+++ b/src/app/modules/events/pages/events/events.component.css
@@ -1,10 +1,9 @@
-body {
-  padding: 10%;
+.main-container {
   background: rgb(255, 255, 255);
   background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
   background-size: cover;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
-  padding-top: 160px;
+  padding: 160px 10% 10%;
 }
 
 .topbottomLine {
