--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -1,100 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IEEExtreme</title>
-</head>
-<header>
-  <app-navbar></app-navbar>
-</header>
-
-<body>
-    <!-- Inicio and facts -->
-    <div class="bottomLine" id="home">
-        <img src="../../../../../assets/image/events/ieeextreme/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
-        <div class="container" id="facts">
-            <div class="row">
-              <div class="col-sm">
-                  <h1>15</h1>
-                  <h3 class="facts">{{ 'IEEEXTREME.FACTS.EDITIONS' | translate }}</h3>
-              </div>
-              <div class="dottedlineright"></div>
-              <div class="col-sm">
-                    <h1>54+</h1>
-                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.PARTICIPANTS' | translate }}</h3>
-              </div>
-              <div class="dottedlineright"></div>
-              <div class="col-sm">
-                    <h1>11</h1>
-                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.TOPTEAMS' | translate }}</h3>
-              </div>
-              <div class="dottedlineright"></div>
-              <div class="col-sm">
-                    <h1>24hs</h1>
-                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.HOURS' | translate }}</h3>
-              </div>
-            </div>
+<div class="main-container">
+  <div class="bottomLine" id="home">
+    <img src="../../../../../assets/image/events/ieeextreme/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
+    <div class="container" id="facts">
+      <div class="row">
+        <div class="col-sm">
+          <h1>15</h1>
+          <h3 class="facts">{{ 'IEEEXTREME.FACTS.EDITIONS' | translate }}</h3>
         </div>
-    </div>
-
-    <!-- Resolve problemas en equipo -->
-    <div class="bottomLine">
-        <div class="container">
-            <div class="row">
-              <div class="col-sm">
-                <h2>{{ 'IEEEXTREME.TEAM.TITLE' | translate }}</h2>
-                <div class="transparent">{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</div>
-              </div>
-              <div class="col-sm">
-                <img src="../../../../../assets/image/events/ieeextreme/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
-              </div>
-            </div>
+        <div class="dottedlineright"></div>
+        <div class="col-sm">
+          <h1>54+</h1>
+          <h3 class="facts">{{ 'IEEEXTREME.FACTS.PARTICIPANTS' | translate }}</h3>
         </div>
-    </div>
-
-    <!-- Queres participar -->
-    <div class="bottomLine" id="takepart">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="../../../../../assets/image/events/ieeextreme/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
-                </div>
-              <div class="col-sm">
-                <h2>{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}</h2>
-                <div class="transparent">{{ 'IEEEXTREME.PARTICIPATE.TEXT' | translate }}</div>
-              </div>
-            </div>
+        <div class="dottedlineright"></div>
+        <div class="col-sm">
+          <h1>11</h1>
+          <h3 class="facts">{{ 'IEEEXTREME.FACTS.TOPTEAMS' | translate }}</h3>
         </div>
-    </div>
-
-    <!-- Sponsors -->
-    <div class="bottomLine">
-      <h1>{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
-      <br>
-      <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getIeextremeSponsors()"></app-sponsor-component>
-    </div>
-
-    <!-- Sponsor team -->
-    <div class="noLine">
-      <h1>Sponsorship 2022</h1>
-      <p class="sponsors-needed-text">{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm" *ngFor="let contact of contacts">
-                  <div class="sponsorContact">
-                    <h3>{{ contact.name }}</h3>
-                    <a href="mailto:{{contact.mail}}" class="whiteLink">
-                      {{contact.mail}}
-                    </a>
-                  </div>
-                </div>
-            </div>
+        <div class="dottedlineright"></div>
+        <div class="col-sm">
+          <h1>24hs</h1>
+          <h3 class="facts">{{ 'IEEEXTREME.FACTS.HOURS' | translate }}</h3>
         </div>
+      </div>
     </div>
+  </div>
 
-</body>
+  <!-- Resolve problemas en equipo -->
+  <div class="bottomLine">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <h2>{{ 'IEEEXTREME.TEAM.TITLE' | translate }}</h2>
+          <div class="transparent">{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</div>
+        </div>
+        <div class="col-sm">
+          <img src="../../../../../assets/image/events/ieeextreme/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+        </div>
+      </div>
+    </div>
+  </div>
 
-<app-footer></app-footer>
-</html>
+  <!-- Queres participar -->
+  <div class="bottomLine" id="takepart">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <img src="../../../../../assets/image/events/ieeextreme/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+        </div>
+        <div class="col-sm">
+          <h2>{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}</h2>
+          <div class="transparent">{{ 'IEEEXTREME.PARTICIPATE.TEXT' | translate }}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Sponsors -->
+  <div class="bottomLine">
+    <h1>{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
+    <br>
+    <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getIeextremeSponsors()"></app-sponsor-component>
+  </div>
+
+  <!-- Sponsor team -->
+  <div class="noLine">
+    <h1>Sponsorship 2022</h1>
+    <p class="sponsors-needed-text">{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm" *ngFor="let contact of contacts">
+          <div class="sponsorContact">
+            <h3>{{ contact.name }}</h3>
+            <a href="mailto:{{contact.mail}}" class="whiteLink">
+              {{contact.mail}}
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
