--- a/src/app/modules/ras/pages/ras/ras.component.html
+++ b/src/app/modules/ras/pages/ras/ras.component.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ITBA IEEE RAS Student Branch Chapter</title>
-</head>
-<header>
-  <app-navbar bgColor="#862633"></app-navbar>
-</header>
-
-<body>
+<div class="main-container">
   <div class="bottomLine" id="home">
     <div class="container" id="wip">
       <div class="titleRow">
@@ -18,7 +6,7 @@
         <h3 class="subtitle">{{ "RAS.SUBTITLE" | translate }}</h3>
       </div>
       <img src="../../../../../assets/image/ras/IEEE_RAS_logo_4C_stacked-HiRes.png" class="rasLogo"
-        alt="Logo ITBA-IEEE" />
+           alt="Logo ITBA-IEEE" />
     </div>
     <hr>
     <div class="text-container">
@@ -52,7 +40,5 @@
       <app-team-card [team]="team.team"></app-team-card>
     </div>
   </div>
-</body>
-<app-footer></app-footer>
 
-</html>
+</div>
