--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.css
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.css
@@ -1,16 +1,10 @@
-html {
-    min-height: 100%;
-    height: auto;
-}
 
-body {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    padding-top: 160px;
-    padding-bottom: 3%;
+.main-container {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
+  background-size: cover;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  padding: 160px 10% 3%;
 }
 /* Thick red border */
 
