--- a/src/app/modules/typescript/pages/typescript.component.css
+++ b/src/app/modules/typescript/pages/typescript.component.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 
-html {
-    background-size: cover;
-}
-
-body {
+.main-container {
     padding: 10%;
     background: rgb(255, 255, 255);
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
